// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@example tests > AVERAGE(1, 3, 2, 5, 4) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 3 │
└───┴───┘
"
`;

exports[`@example tests > COUNT(1, 2, TRUE(), "hello world", 3.2) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 3 │
└───┴───┘
"
`;

exports[`@example tests > MAX(1, 3, 2, 5, 4) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 5 │
└───┴───┘
"
`;

exports[`@example tests > MEDIAN(1, 3, 2, 5, 4) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 3 │
└───┴───┘
"
`;

exports[`@example tests > MIN(5, 4, 1, 2, 3) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 1 │
└───┴───┘
"
`;

exports[`@example tests > MODE(3, 2, 1, 3, 3, 4, 5, 8, 9, 1) 1`] = `
"
┌───┬───┐
│   │ A │
├───┼───┤
│ 1 │ 3 │
└───┴───┘
"
`;
